@@ -1,11 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
   <meta name="generator" content="HTML Tidy, see www.w3.org" />
-  <title>Scripting in CoffeeMud 5.9</title>
-  <link rel="StyleSheet" href="style.css" type="text/css" media="screen" />
-<!-- Modified by Josh Mueller, 2006-05-05, fix validation problems, add index, and fix spelling errors --><!-- Modified by Josh Mueller, 2006-05-06, add close_prog, lock_prog, unlock_prog, open_prog -->
-</head>
+  
+  <title>Scripting in CoffeeMud 5.9</title><link rel="StyleSheet" href="style.css" type="text/css" media="screen" /><!-- Modified by Josh Mueller, 2006-05-05, fix validation problems, add index, and fix spelling errors --><!-- Modified by Josh Mueller, 2006-05-06, add close_prog, lock_prog, unlock_prog, open_prog --></head>
+
 <body>
 <center>
 <table style="width: 90%;" border="1" cellpadding="10" cellspacing="0">
@@ -79,8 +77,7 @@ and potentially the context in which each alternative applies or
 doesn't apply, and then makes selections and instantiates&nbsp;real
 mud objects based on those selections. &nbsp;The input to the
 engine is a very specifically built XML file, and the output is actual
-mud objects (mobs, items, areas, rooms, or all the above) in your game.<span
- style="font-weight: bold;" /></p>
+mud objects (mobs, items, areas, rooms, or all the above) in your game.<span style="font-weight: bold;"></span></p>
       <h2><a name="structure">Overview of
 XML Tags</a></h2>
 The random generator works by
@@ -145,8 +142,7 @@ Tags are always evaluated recursively, from first to last.
 &nbsp;Any tag may contain zero or more of the following
 meta-attributes:<br />
 &nbsp;&nbsp;<br />
-      <table style="text-align: left; width: 100%;" border="1"
- cellpadding="2" cellspacing="2">
+      <table style="text-align: left; width: 100%;" border="1" cellpadding="2" cellspacing="2">
         <tbody>
           <tr>
             <td>id</td>
@@ -429,8 +425,7 @@ the&nbsp;content is built from the file in
 resources/randareas/example.xml, though the builder&nbsp;may
 specify his or her own xml file path as one of the many
 arguments.&nbsp; The arguments,&nbsp;briefly, are:<br />
-      <table style="text-align: left; width: 100%;" border="1"
- cellpadding="2" cellspacing="2">
+      <table style="text-align: left; width: 100%;" border="1" cellpadding="2" cellspacing="2">
         <tbody>
           <tr>
             <td>OBJ TYPE</td>
@@ -755,7 +750,8 @@ characters "&lt;"
 followed by a math expression &nbsp;evaluating to an upper level
 limit
 for the item to craft, "&gt;"
-for a lower limit, or "=" followed by a the base class ID to to filter
+for a lower level limit,"{" for an upper value limit, "}" for a lower
+value limit, or "=" followed by a the base class ID to to filter
 in. &nbsp;If the ID of the common skill is "resources" or "farmables",
 then raw resource items will be generated instead.</li>
       </ul>
@@ -981,8 +977,7 @@ the QUEST tag using that template.</dd>
 time, numerous existing quest templates have already had associated
 snippets of Random Generator XML written to demonstrate the above.
 &nbsp;These are found in the <span style="font-family: monospace;">/resources/quests/random</span>
-directory, and can be indirectly accessed from the same <span
- style="font-family: monospace;">/resources/randareas/example.xml</span>
+directory, and can be indirectly accessed from the same <span style="font-family: monospace;">/resources/randareas/example.xml</span>
 that is used to generate random areas, rooms, mobs, etc. &nbsp;This
 means that you can use the GENERATE command to generate a random quest
 of any type anywhere in your entire world by entering:<br />
@@ -999,8 +994,7 @@ with a "duration" definition (see the Game Builders Guide), then the
 quest will be writte to the database and become a persistant feature of
 your world.<br />
           <br />
-If you look through the examples in <span
- style="font-family: monospace;">/resources/quests/random</span>
+If you look through the examples in <span style="font-family: monospace;">/resources/quests/random</span>
 , you will see much that is similar to Random Area documents. Strings
 and other selections are being chosen from, conditions are set for some
 values over others, etc. &nbsp;However, since many of the quest
@@ -1051,8 +1045,7 @@ in the FROM clause may be included in the final results.</p>
 the following:<br />
       </p>
       <ul>
-        <li>A CMFS file path to a CMARE file, such as :<span
- style="font-family: monospace;">:/resources/map/plains.cmare</span></li>
+        <li>A CMFS file path to a CMARE file, such as :<span style="font-family: monospace;">:/resources/map/plains.cmare</span></li>
         <li><span style="font-family: monospace;">AREAS</span> to use
 the set of all world areas</li>
         <li><span style="font-family: monospace;">ROOMS</span> to use
@@ -1063,17 +1056,14 @@ the set of all existing world non-property rooms</li>
 the set of all existing world mobs</li>
         <li><span style="font-family: monospace;">ITEMS</span> to use
 the set of all existing world items</li>
-        <li>In case where a qualifying object is implied, <span
- style="font-family: monospace;">AREA</span> can be used to refer to
+        <li>In case where a qualifying object is implied, <span style="font-family: monospace;">AREA</span> can be used to refer to
 that specific area.</li>
-        <li>Another SELECT: statement in parenthesis, such as: <span
- style="font-family: monospace;">SELECT: name from (SELECT * from AREA)</span></li>
+        <li>Another SELECT: statement in parenthesis, such as: <span style="font-family: monospace;">SELECT: name from (SELECT * from AREA)</span></li>
       </ul>
 The
 FROM clause can also include narrowing suffixes. &nbsp;A narrowing
 suffix comes after the&nbsp;simple term, and is separated from it by a
-backslash \. &nbsp; For example, if your from clause looks like <span
- style="font-family: monospace;">SELECT * FROM AREAS\ROOM</span>
+backslash \. &nbsp; For example, if your from clause looks like <span style="font-family: monospace;">SELECT * FROM AREAS\ROOM</span>
 &nbsp;, then the ROOM portion is the narrowing suffix of the AREAS
 term. &nbsp;You can also continue adding more narrowing suffixes as
 needed. &nbsp;For example: <span style="font-family: monospace;">SELECT
@@ -1152,17 +1142,12 @@ in an empty string "".<br />
       <br />
 To summarize, valid property terms include:<br />
       <ul>
-        <li>A valid property of an object from the FROM set, e.g <span
- style="font-family: monospace;">NAME</span>, <span
- style="font-family: monospace;">CLASS</span>, etc..<br />
+        <li>A valid property of an object from the FROM set, e.g <span style="font-family: monospace;">NAME</span>, <span style="font-family: monospace;">CLASS</span>, etc..<br />
         </li>
-        <li>A string or numeric literal, e.g. <span
- style="font-family: monospace;">"Bob The Builder"</span>, <span
- style="font-family: monospace;">12.34</span>, etc..</li>
+        <li>A string or numeric literal, e.g. <span style="font-family: monospace;">"Bob The Builder"</span>, <span style="font-family: monospace;">12.34</span>, etc..</li>
         <li>An asterisk * or a period . to refer to the FROM set object
 itself.</li>
-        <li>Another MQL statement, e.g.<span
- style="font-family: monospace;"> (SELECT: * FROM areas\mobs)</span></li>
+        <li>Another MQL statement, e.g.<span style="font-family: monospace;"> (SELECT: * FROM areas\mobs)</span></li>
         <li>An XML tag id, e.g. <span style="font-family: monospace;">$tagname</span></li>
       </ul>
 An example of a legal property might
@@ -1174,8 +1159,7 @@ of world object, or objects imported from cmare files. &nbsp;<br />
       <br />
 As
 mentioned previously, SELECT: clause properties can be separated by
-commas in order to select more than one. &nbsp;For example: <span
- style="font-family: monospace;">SELECT: class, name FROM areas\mobs</span>
+commas in order to select more than one. &nbsp;For example: <span style="font-family: monospace;">SELECT: class, name FROM areas\mobs</span>
 would show the class id and name of every mob in your game. &nbsp;<br />
       <br />
 SELECT:
@@ -1197,8 +1181,7 @@ FROM clauses, these narrowing terms are separated by backslashes \.
 COUNT. &nbsp;The purpose of the COUNT term is to report the number of
 times the value of the previous terms appears in the rest of the FROM:
 clause. &nbsp;For example, suppose you wanted to know the number of
-times each mob name is used, to do that, you might enter <span
- style="font-family: monospace;">SELECT: name, name\count FROM
+times each mob name is used, to do that, you might enter <span style="font-family: monospace;">SELECT: name, name\count FROM
 areas\mobs</span><br />
       <br />
 Lastly,
@@ -1217,8 +1200,7 @@ the result set</li>
         <li>UNIQUE to include only one row where the property is of any
 given value</li>
       </ul>
-For example, to quickly count the mobs in your game, you might enter <span
- style="font-family: monospace;">SELECT: COUNT\* from AREAS\MOBS</span><br />
+For example, to quickly count the mobs in your game, you might enter <span style="font-family: monospace;">SELECT: COUNT\* from AREAS\MOBS</span><br />
       <br />
 The
 WHERE clause contains one or more conditions, which you can further
@@ -1237,8 +1219,7 @@ aggregating prefixes. &nbsp;Narrowing suffixes, however, are permitted.
 is checking whether the NAME property of an item in the FROM clause is
 equal to the string literal "BOB". &nbsp;If it is, when that condition
 is true. &nbsp;Putting it together then, to show the mobs in your game
-whose names are EXACTLY "BOB", you might do <span
- style="font-family: monospace;">SELECT: * FROM areas\mobs WHERE
+whose names are EXACTLY "BOB", you might do <span style="font-family: monospace;">SELECT: * FROM areas\mobs WHERE
 name="BOB"</span>. This works because NAME is a property of every mob
 in the AREAS\MOBS from set, and can be compared with the word "BOB".<br />
       <br />
@@ -1262,5 +1243,4 @@ name="JOE" would expand the number of possible results by one name.
 </table>
 <br />
 </center>
-</body>
-</html>
+</body></html>
