@@ -6,6 +6,7 @@
   5. New command: abilities
   6. Default MINMANACOST is now skill level or 10, whichever is greater.
   7. Many crafting skills now support FROM syntax to specify specific resources.
+  8. Metacraft will select random resource by weight.  New value filter for metacraft in Random Generator.
   
 # Build 5.9.11 Release 02/20/2021
   1. a(n) is now official filter syntax for a/an
